--- a/signUp.html
+++ b/signUp.html
@@ -51,6 +51,141 @@
     </header>
     <!-- End Header -->
 
+    <!-- ======= Appointment Section ======= -->
+    <section id="appointment" class="appointment section-bg mt-4">
+        <div class="container">
+            <div class="section-title">
+                <h2>Sign Up</h2>
+            </div>
+
+            <form action="" id="signupForm">
+                <div class="row">
+                    <h3>Basic Information</h3>
+                    <div class="col-md-4 form-group">
+                        <input type="text" name="name" class="form-control" id="fname" placeholder="First Name"
+                            data-rule="minlen:4" data-msg="Please enter at least 4 chars">
+                        <div class="validate"></div>
+                    </div>
+                    <div class="col-md-4 form-group mt-3 mt-md-0">
+                        <input type="text" class="form-control" name="name" id="lname" placeholder="Last Name"
+                            data-rule="" data-msg="Please enter a valid email">
+                        <div class="validate"></div>
+                    </div>
+                    <div class="col-md-4 form-group mt-3 mt-md-0">
+                        <input type="tel" class="form-control" name="phone" id="phone" placeholder="Phone number"
+                            data-rule="minlen:4" data-msg="Please enter at least 4 chars">
+                        <div class="validate"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4 form-group mt-3">
+                        <input type="email" name="name" class="form-control" id="email" placeholder="Email"
+                            data-rule="minlen:4" data-msg="Please enter at least 4 chars">
+                        <div class="validate"></div>
+                    </div>
+                    <div class="col-md-4 form-group mt-3">
+                        <input type="password" class="form-control" name="password" id="password" placeholder="password"
+                            data-rule="email" data-msg="Please enter a valid email">
+                        <div class="validate"></div>
+                    </div>
+                    <div class="col-md-4 form-group mt-3">
+                        <input type="password" class="form-control" name="password" id="password"
+                            placeholder="Confirm password" data-rule="minlen:4"
+                            data-msg="Please enter at least 4 chars">
+                        <div class="validate"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4 form-group mt-3">
+                        <input type="date" name="date" id="birthdate" class="form-control">
+                        <div class="validate"></div>
+                    </div>
+                    <div class="col-md-4 form-group mt-3">
+                        <select name="sex" id="sex" class="form-select">
+                            <option value="">Gender</option>
+                            <option value="Male">Male</option>
+                            <option value="Female">Female</option>
+                        </select>
+                        <div class="validate"></div>
+                    </div>
+                    <div class="col-md-4 form-group mt-3">
+                        <select name="subcity" id="subcity" class="form-select">
+                            <option value="">Sub City</option>
+                            <option value="Kolfe-Keranyo"> Kolfe-Keranyo</option>
+                            <option value="Kirkos"> Kirkos </option>
+                            <option value="Nifas-Silk"> Nifas-Silk </option>
+                            <option value="Gulele"> Gulele </option>
+                            <option value="Yeka"> Yeka </option>
+                            <option value="Lemi-Kura"> Lemi-Kura </option>
+                            <option value="Akaki-Kality"> Akaki-Kality </option>
+                            <option value="Arada">Arada</option>
+                            <option value="Addis-Ketema"> Addis-Ketema </option>
+                            <option value="Lideta"> Lideta </option>
+                        </select>
+                        </select>
+                        <div class="validate"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <h3 class="mt-3">Medical Record</h3>
+                    <div class="col-md-4 form-group mt-3">
+                        <input type="text" class="form-control" name="text" id="name" placeholder="Height in cm"
+                            data-rule="text" data-msg="Please enter a valid email">
+                        <div class="validate"></div>
+                    </div>
+                    <div class="col-md-4 form-group mt-3">
+                        <input type="text" class="form-control" name="text" id="name" placeholder="Weight in Kg"
+                            data-rule="text" data-msg="Please enter a valid email">
+                        <div class="validate"></div>
+                        <div class="validate"></div>
+                    </div>
+                    <div class="col-md-4 form-group mt-3">
+                        <select name="department" id="department" class="form-select">
+                            <option value="">Do you consume alcohol daily</option>
+                            <option value="None">Yes</option>
+                            <option value="chest pain">No</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4 form-group mt-3">
+                        <select name="department" id="department" class="form-select">
+                            <option value="">Do you smoke daily</option>
+                            <option value="None">Yes</option>
+                            <option value="chest pain">No</option>
+                        </select>
+                    </div>
+                    <div class="col-md-4 form-group mt-3">
+                        <select name="department" id="department" class="form-select">
+                            <option value="">Family Medical History</option>
+                            <option value="None">None</option>
+                            <option value="chest pain">cystic fibrosis</option>
+                            <option value="cardiac disease">sickle cell anemia</option>
+                            <option value="Female">Marfan syndrome</option>
+                            <option value="Female">Down syndrome</option>
+                        </select>
+                    </div>
+                    <div class="col-md-4 form-group mt-3">
+                        <select name="department" id="department" class="form-select">
+                            <option value="">Current symptoms</option>
+                            <option value="None">None</option>
+                            <option value="chest pain">Chest pain</option>
+                            <option value="cardiac disease">Respiratory</option>
+                            <option value="Female">Gastrointestinal</option>
+                            <option value="Female">Musculoskeletal</option>
+                        </select>
+                    </div>
+                </div>
+
+
+                <button type="submit" class="btn btn-primary btn-lg mt-4 d-flex mx-auto">Sign up</button>
+            </form>
+        </div>
+        </div>
+
+        </div>
+    </section><!-- End Appointment Section -->
+
 
 </body>
 
