--- a/signUp.html
+++ b/signUp.html
@@ -230,6 +230,22 @@
         </div>
     </footer><!-- End Footer -->
 
+
+
+    <div id="preloader"></div>
+    <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
+
+    <!-- Vendor JS Files -->
+    <script src="assets/vendor/jquery/jquery.min.js"></script>
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Template Main JS File -->
+    <script src="assets/js/main.js"></script>
+
+    <script src="https://unpkg.com/dexie/dist/dexie.js"></script>
+    <script src="./assets/js/profile.js"></script>
+    <script src="./assets/js/dbs.js"></script>
+    <script src="./assets/js/signup.js"></script>
 </body>
 
 </html>
