Links to login page and signup page edited

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         </ul>
       </nav><!-- .nav-menu -->
 
-      <a href="#" class="button-btn ">Log in</a>
-      <a href="#" class="button-btn ">sign up</a>
+      <a href="logIn.html" class="button-btn ">Log in</a>
+      <a href="signUp.html" class="button-btn ">sign up</a>
 
     </div>
   </header>
