--- a/logIn.html
+++ b/logIn.html
@@ -132,7 +132,10 @@
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Template Main JS File -->
-    <script src="assets/js/main.js"></script>
+    <script src="https://unpkg.com/dexie/dist/dexie.js"></script>
+    <script src="./assets/js/profile.js"></script>
+    <script src="./assets/js/db.js"></script>
+    <script src="./assets/js/signup.js"></script>
 
 
 </body>
