--- a/signUp.html
+++ b/signUp.html
@@ -244,7 +244,7 @@
 
     <script src="https://unpkg.com/dexie/dist/dexie.js"></script>
     <script src="./assets/js/profile.js"></script>
-    <script src="./assets/js/dbs.js"></script>
+    <script src="./assets/js/db.js"></script>
     <script src="./assets/js/signup.js"></script>
 </body>
 
