--- a/logIn.html
+++ b/logIn.html
@@ -49,6 +49,38 @@
         </div>
     </header>
     <!-- End Header -->
+
+    <!-- ======= Appointment Section ======= -->
+    <section id="hero" class="appointment section-bg mt-4">
+        <div class="container mx-auto">
+            <div class="row">
+                <div class="col col-md-4">
+                    <div class="section-title">
+
+                        <h2>Log In</h2>
+                    </div>
+                    <form>
+                        <h3>Email </h3>
+                        <div class="form-group">
+                            <input type="email" class="form-control" placeholder="Email" id="exampleInputEmail1"
+                                aria-describedby="emailHelp">
+                        </div>
+                        <div class="form-group mt-3">
+                            <input type="password" class="form-control" id="exampleInputPassword1"
+                                placeholder="Password">
+                        </div>
+                        <div class="d-grid gap-2">
+                            <button class="btn btn-primary mt-3" type="button">Log in</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+
+        </div>
+
+    </section><!-- End Appointment Section -->
+
+
 </body>
 
 </html>
