--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active"><a href="index.html">Home</a></li>
-          <li><a href="#about">link1</a></li>
-          <li><a href="#Overview">link2</a></li>
-          <li><a href="#faq">link3</a></li>
-          <li><a href="#contact">link4</a></li>
+          <li class=""><a href="index.html">Home</a></li>
+          <li><a href="index.html#about">About</a></li>
+          <li><a href="index.html#Overview">Overview</a></li>
+          <li><a href="index.html#faq">FAQ</a></li>
+          <li><a href="index.html#contact">Contact</a></li>
 
-        </ul>
-      </nav><!-- .nav-menu -->
+      </ul>
+  </nav><!-- .nav-menu -->
 
-      <a href="logIn.html" class="button-btn ">Log in</a>
-      <a href="signUp.html" class="button-btn ">sign up</a>
+  <a href="./signUp.html" class="button-btn">Sign up </a>
+  <a href="./logIn.html" class="button-btn">Login</a>
 
     </div>
   </header>
