--- a/User.html
+++ b/User.html
@@ -106,7 +106,7 @@
                 </div>
             </nav>
             <!-- End Navbar -->
-            
+
                         <!-- ======= Recommended vaccines section ======= -->
   <section id="why-us" class="why-us" style="padding: 0px;">
     <div class="container-fluid mt-4 counts p-3">
@@ -144,10 +144,90 @@
           </div><!-- End .content-->
         </div>
       </div>
-
     </div>
   </section>
   <!-- End of Recommended vaccines  -->
+
+<!-- Available Vaccines -->
+  <section id="vaccines" class="why-us" style="padding: 0px;">
+    <div class="container-fluid mt-4 p-3">
+        <p class="display-6 ms-4">Available Vaccines </p>
+      <div class="row">
+        <div class="col-lg-12 d-flex align-items-stretch">
+          <div class="icon-boxes d-flex flex-column justify-content-center">
+            <div class="row">
+              <div class="col-xl-3 d-flex align-items-stretch">
+                <div class="icon-box mt-4 mt-xl-0">
+                  <span class="iconify" data-icon="bx-bxs-right-arrow" data-inline="false"></span>
+                  <h4>Hepatitis B</h4>
+                  <p>Hepatitis B is a vaccine-preventable liver infection caused by the hepatitis B virus (HBV)</p>
+                  <button class="btn btn-primary">Apply for Vaccine</button>
+                </div>
+              </div>
+              <div class="col-xl-3 d-flex align-items-stretch">
+                <div class="icon-box mt-4 mt-xl-0">
+                  <span class="iconify" data-icon="bx-bxs-right-arrow" data-inline="false"></span>
+                  <h4>Hepatitis B</h4>
+                  <p>Hepatitis B is a vaccine-preventable liver infection caused by the hepatitis B virus (HBV)</p>
+                  <button class="btn btn-primary">Apply for Vaccine</button>
+                </div>
+              </div>
+              <div class="col-xl-3 d-flex align-items-stretch">
+                <div class="icon-box mt-4 mt-xl-0">
+                  <h4>Measles</h4>
+                  <p>The vaccine protects against three diseases: measles, mumps, and rubella.</p>
+                  <button class="btn btn-primary">Apply for Vaccine</button>
+                </div>
+              </div>
+              <div class="col-xl-3 d-flex align-items-stretch">
+                <div class="icon-box mt-4 mt-xl-0">
+                  <h4>Tetanus</h4>
+                  <p>Tetanus vaccine, also known as tetanus toxoid (TT), is a toxoid vaccine used to prevent tetanus.</p>
+                  <button class="btn btn-primary">Apply for Vaccine</button>
+                </div>
+              </div>
+            </div>
+<!-- second row -->
+            <div class="row mt-3">
+                <div class="col-xl-3 d-flex align-items-stretch">
+                  <div class="icon-box mt-4 mt-xl-0">
+                    <span class="iconify" data-icon="bx-bxs-right-arrow" data-inline="false"></span>
+                    <h4>Hepatitis B</h4>
+                    <p>Hepatitis B is a vaccine-preventable liver infection caused by the hepatitis B virus (HBV)</p>
+                    <button class="btn btn-primary">Apply for Vaccine</button>
+                  </div>
+                </div>
+                <div class="col-xl-3 d-flex align-items-stretch">
+                  <div class="icon-box mt-4 mt-xl-0">
+                    <span class="iconify" data-icon="bx-bxs-right-arrow" data-inline="false"></span>
+                    <h4>Hepatitis B</h4>
+                    <p>Hepatitis B is a vaccine-preventable liver infection caused by the hepatitis B virus (HBV)</p>
+                    <button class="btn btn-primary">Apply for Vaccine</button>
+                  </div>
+                </div>
+                <div class="col-xl-3 d-flex align-items-stretch">
+                  <div class="icon-box mt-4 mt-xl-0">
+                    <h4>Measles</h4>
+                    <p>The vaccine protects against three diseases: measles, mumps, and rubella.</p>
+                    <button class="btn btn-primary">Apply for Vaccine</button>
+                  </div>
+                </div>
+                <div class="col-xl-3 d-flex align-items-stretch">
+                  <div class="icon-box mt-4 mt-xl-0">
+                    <h4>Tetanus</h4>
+                    <p>Tetanus vaccine, also known as tetanus toxoid (TT), is a toxoid vaccine used to prevent tetanus.</p>
+                    <button class="btn btn-primary">Apply for Vaccine</button>
+                  </div>
+                </div>
+              </div>
+          </div><!-- End .content-->
+        </div>
+      </div>
+
+    </div>
+  </section>
+  <!-- Available Vaccines -->
+
 
   <!--Appointment area-->
   <div class="content">
