User page UI is completed

--- a/User.html
+++ b/User.html
@@ -86,8 +86,7 @@
                         <ul class="nav navbar-nav mr-auto">
                             <li class="nav-item">
                                 <a href="#" class="nav-link" data-toggle="dropdown">
-                                    <i class="nc-icon nc-palette"></i>
-                                    <span class="d-lg-none">Dashboard</span>
+                                    <span class="d-lg-none">Profile</span>
                                 </a>
                             </li>
                             
