--- a/Admin.html
+++ b/Admin.html
@@ -7,7 +7,7 @@
     <link rel="apple-touch-icon" sizes="76x76" href="img/apple-icon.png">
     <link rel="icon" type="image/png" href="./assets/img/icon.jpg">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>eVac - User</title>
+    <title>eVac - Admin</title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
     <!--     Fonts and icons     -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
@@ -76,7 +76,7 @@
             <!-- Navbar -->
             <nav class="navbar navbar-expand-lg " color-on-scroll="500">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#pablo"> Your profile </a>
+                    <a class="navbar-brand" href="#pablo"> Admin Profile </a>
                     <button href="" class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-bar burger-lines"></span>
                         <span class="navbar-toggler-bar burger-lines"></span>
@@ -105,44 +105,30 @@
                 </div>
             </nav>
             <!-- End Navbar -->
-
+            
                         <!-- ======= Recommended vaccines section ======= -->
   <section id="why-us" class="why-us" style="padding: 0px;">
-    <div class="container-fluid mt-4 counts p-3">
-        <p class="display-6 ms-4">Recommended vaccines for you</p>
-      <div class="row">
-        <div class="col-lg-12 d-flex align-items-stretch">
-          <div class="icon-boxes d-flex flex-column justify-content-center">
-            <div class="row">
-              <div class="col-xl-4 d-flex align-items-stretch">
-                <div class="icon-box mt-4 mt-xl-0">
-                  <span class="iconify" data-icon="bx-bxs-right-arrow" data-inline="false"></span>
-                  <img src="assets/img/departments-2.jpg" alt="" class="img-fluid">
-                  <h4>Hepatitis B</h4>
-                  <p>Hepatitis B is a vaccine-preventable liver infection caused by the hepatitis B virus (HBV)</p>
-                  <button class="btn btn-primary">Apply for Vaccine</button>
+    <div class="container  counts p-2">
+        <div class="section-title" style="padding: 0px;">
+            <h2>Start Session</h2>
+          </div>
+          <div class="ml-5 mr-5">
+        <form action="">
+            <div class="row mb-3">
+                <label for="inputEmail3" class="col-sm-2 col-form-label">Starting Date</label>
+                <div class="col-sm-10">
+                    <input type="date" name="date" id="birthdate" class="form-control">
                 </div>
               </div>
-              <div class="col-xl-4 d-flex align-items-stretch">
-                <div class="icon-box mt-4 mt-xl-0">
-                    <img src="assets/img/departments-4.jpg" alt="" class="img-fluid">
-                  <h4>Measles</h4>
-                  <p>The vaccine protects against three diseases: measles, mumps, and rubella.</p>
-                  <button class="btn btn-primary">Apply for Vaccine</button>
-                </div>
-              </div>
-              <div class="col-xl-4 d-flex align-items-stretch">
-                <div class="icon-box mt-4 mt-xl-0">
-                    <img src="assets/img/departments-5.jpg" alt="" class="img-fluid">
-                  <h4>Tetanus</h4>
-                  <p>Tetanus vaccine, also known as tetanus toxoid (TT), is a toxoid vaccine used to prevent tetanus.</p>
-                  <button class="btn btn-primary">Apply for Vaccine</button>
-                </div>
-              </div>
-            </div>
-          </div><!-- End .content-->
+            <div class="validate"></div>
+            <select class="form-select form-select-sm" aria-label=".form-select-sm example">
+                <option selected>Vaccination Name</option>
+                <option value="1">Polio</option>
+                <option value="2">Hepatitis B</option>
+                <option value="3">Measles</option>
+              </select>
+          </form>
         </div>
-      </div>
     </div>
   </section>
   <!-- End of Recommended vaccines  -->
