--- a/logIn.html
+++ b/logIn.html
@@ -8,7 +8,7 @@
     <title>Login</title>
 
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon">
+    <!-- <link href="assets/img/favicon.png" rel="icon"> -->
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
@@ -135,7 +135,7 @@
     <script src="https://unpkg.com/dexie/dist/dexie.js"></script>
     <script src="./assets/js/profile.js"></script>
     <script src="./assets/js/db.js"></script>
-    <script src="./assets/js/signup.js"></script>
+    <script src="./assets/js/login.js"></script>
 
 
 </body>
