scripts added to user page

--- a/User.html
+++ b/User.html
@@ -299,6 +299,10 @@
     
 </body>
 
+<script src="https://unpkg.com/dexie/dist/dexie.js"></script>
+<script src="./assets/js/db.js"></script>
+<script src="./assets/js/userprofile.js"></script>
+
 
 </script>
 
