deleted checkPassword call

--- a/signUp.html
+++ b/signUp.html
@@ -178,7 +178,7 @@
                 </div>
 
 
-                <button type="submit" class="btn btn-primary btn-lg mt-4 d-flex mx-auto" onclick="checkPassword()">Sign up</button>
+                <button type="submit" class="btn btn-primary btn-lg mt-4 d-flex mx-auto" >Sign up</button>
             </form>
         </div>
         </div>
