--- a/User.html
+++ b/User.html
@@ -95,7 +95,7 @@
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item">
                                 <a class="nav-link" href="./logIn.html">
-                                    <span class="no-icon" ><i class=" bx bx-door-open"></i>Log out</span>
+                                    <span class="no-icon" ><i class=" bx bx-door-open" id="logout"></i>Log out</span>
                                     
                                 </a>
                             </li>
@@ -110,7 +110,7 @@
   <section id="why-us" class="why-us" style="padding: 0px;">
     <div class="container-fluid mt-4 counts p-3">
         <p class="display-6 ms-4">Recommended vaccines for you</p>
-      <div class="row">
+      <div class="row recommended_vaccines_container" id="row recommended_vaccines_container">
         <div class="col-lg-12 d-flex align-items-stretch">
           <div class="icon-boxes d-flex flex-column justify-content-center">
             <div class="row">
