--- a/User.html
+++ b/User.html
@@ -235,7 +235,7 @@
             
             <div class="col-md-">
                 <div class="card ">
-                    <div class="card-header " id="app">
+                    <div class="card-header " id="notification">
                         <h4 class="card-title">Appointment</h4>
                         <p class="card-category">You don't have any appointments</p>
                     </div>
