--- a/User.html
+++ b/User.html
@@ -120,7 +120,7 @@
                   <img src="assets/img/departments-2.jpg" alt="" class="img-fluid">
                   <h4>Hepatitis B</h4>
                   <p>Hepatitis B is a vaccine-preventable liver infection caused by the hepatitis B virus (HBV)</p>
-                  <button class="btn btn-primary">Apply for Vaccine</button>
+                  <button class="btn btn-primary" id ="applyBtn">Apply for Vaccine</button>
                 </div>
               </div>
               <div class="col-xl-4 d-flex align-items-stretch">
@@ -128,7 +128,7 @@
                     <img src="assets/img/departments-4.jpg" alt="" class="img-fluid">
                   <h4>Measles</h4>
                   <p>The vaccine protects against three diseases: measles, mumps, and rubella.</p>
-                  <button class="btn btn-primary">Apply for Vaccine</button>
+                  <button class="btn btn-primary" id ="applyBtn">Apply for Vaccine</button>
                 </div>
               </div>
               <div class="col-xl-4 d-flex align-items-stretch">
@@ -136,7 +136,7 @@
                     <img src="assets/img/departments-5.jpg" alt="" class="img-fluid">
                   <h4>Tetanus</h4>
                   <p>Tetanus vaccine, also known as tetanus toxoid (TT), is a toxoid vaccine used to prevent tetanus.</p>
-                  <button class="btn btn-primary">Apply for Vaccine</button>
+                  <button class="btn btn-primary" id ="applyBtn">Apply for Vaccine</button>
                 </div>
               </div>
             </div>
@@ -151,7 +151,7 @@
   <section id="vaccines" class="why-us" style="padding: 0px;">
     <div class="container-fluid mt-4 p-3">
         <p class="display-6 ms-4">Available Vaccines </p>
-      <div class="row">
+      <div class="row available_vaccines_container" id="row available_vaccines_container">
         <div class="col-lg-12 d-flex align-items-stretch">
           <div class="icon-boxes d-flex flex-column justify-content-center">
             <div class="row">
@@ -160,7 +160,7 @@
                   <span class="iconify" data-icon="bx-bxs-right-arrow" data-inline="false"></span>
                   <h4>Hepatitis B</h4>
                   <p>Hepatitis B is a vaccine-preventable liver infection caused by the hepatitis B virus (HBV)</p>
-                  <button class="btn btn-primary">Apply for Vaccine</button>
+                  <button class="btn btn-primary" id ="applyBtn">Apply for Vaccine</button>
                 </div>
               </div>
               <div class="col-xl-3 d-flex align-items-stretch">
@@ -168,7 +168,7 @@
                   <span class="iconify" data-icon="bx-bxs-right-arrow" data-inline="false"></span>
                   <h4>Hepatitis B</h4>
                   <p>Hepatitis B is a vaccine-preventable liver infection caused by the hepatitis B virus (HBV)</p>
-                  <button class="btn btn-primary">Apply for Vaccine</button>
+                  <button class="btn btn-primary" id ="applyBtn">Apply for Vaccine</button>
                 </div>
               </div>
               <div class="col-xl-3 d-flex align-items-stretch">
@@ -182,7 +182,7 @@
                 <div class="icon-box mt-4 mt-xl-0">
                   <h4>Tetanus</h4>
                   <p>Tetanus vaccine, also known as tetanus toxoid (TT), is a toxoid vaccine used to prevent tetanus.</p>
-                  <button class="btn btn-primary">Apply for Vaccine</button>
+                  <button class="btn btn-primary" id ="applyBtn">Apply for Vaccine</button>
                 </div>
               </div>
             </div>
