--- a/Admin.html
+++ b/Admin.html
@@ -166,7 +166,14 @@
     </div>
   </section>
   <!-- End of Recommended vaccines  -->
-        
+    
+  <section id="why-us" class="why-us" style="padding: 0px;">
+    <div class="container  counts p-2">
+        <div class="section-title" style="padding: 0px;">
+            <h2>Add new Staff member</h2>
+        </div>
+        <div class="popup-wrapper">
+
         <!-- Start of the Footer-->
             <footer id="footer">
                 <div class="footer-top">
