--- a/Admin.html
+++ b/Admin.html
@@ -174,6 +174,11 @@
         </div>
         <div class="popup-wrapper">
 
+            <div class="pop-up">
+                <div class="popup-close">
+                    <i class="fa fa-close"></i>
+                </div>
+                <div class="popup-content">
         <!-- Start of the Footer-->
             <footer id="footer">
                 <div class="footer-top">
