The form for the popup is under construction

--- a/Admin.html
+++ b/Admin.html
@@ -179,6 +179,30 @@
                     <i class="fa fa-close"></i>
                 </div>
                 <div class="popup-content">
+                    <form action="" id="popupForm" class="row g-3">
+                        <div class="col-md-6">
+                          <label for="inputEmail4" class="form-label">Name</label>
+                          <input type="text" class="form-control" placeholder="Name" aria-label="name" id="workeradd_name">
+                        </div>
+                        <div class="col-md-6">
+                          <label for="inputPassword4" class="form-label">Phone Number</label>
+                          <input type="tel" class="form-control" id="inputPassword4" id="workeradd_phone_number">
+                        </div>
+                        <div class="col-md-6">
+                          <label for="inputEmail4" class="form-label">Email</label>
+                          <input type="email" class="form-control" id="inputEmail4" id="workeradd_email">
+                        </div>
+                        <div class="col-md-6">
+                          <label for="inputPassword4" class="form-label">Password</label>
+                          <input type="password" class="form-control" id="inputPassword4" id="workeradd_password">
+                        </div>
+                        <div class="col-6">
+                          <label for="date" class="form-label">Gender</label>
+                          <select id="workeradd_gender" class="form-select">
+                              <option selected>Choose...</option>
+                                    <option value="workeradd_Male">Male</option>
+                                    <option value="workeradd_Female"> Female</option>
+                            </select>
         <!-- Start of the Footer-->
             <footer id="footer">
                 <div class="footer-top">
