The form is complete completed for the Admin page.

--- a/Admin.html
+++ b/Admin.html
@@ -203,6 +203,53 @@
                                     <option value="workeradd_Male">Male</option>
                                     <option value="workeradd_Female"> Female</option>
                             </select>
+                        </div>
+                        <div class="col-6">
+                          <label for="date" class="form-label">Birthdate</label>
+                          <input type="date" name="date" id="workeradd_birthdate" class="form-control">
+                          <div class="validate"></div>
+                        </div>
+                        <div class="col-md-6">
+                          <label for="inputCity" class="form-label">Department</label>
+                          <input type="text" class="form-control" id="workeradd_department">
+                        </div>
+                        <div class="col-md-4">
+                          <label for="inputState" class="form-label">Subcity</label>
+                          <select id="workeradd_subcity" class="form-select">
+                            <option selected>Choose...</option>
+                                  <option value="">Sub City</option>
+                                  <option value="workeradd_Kolfe-Keranyo"> Kolfe-Keranyo</option>
+                                  <option value="workeradd_Kirkos"> Kirkos </option>
+                                  <option value="workeradd_Nifas-Silk"> Nifas-Silk </option>
+                                  <option value="workeradd_Gulele"> Gulele </option>
+                                  <option value="workeradd_Yeka"> Yeka </option>
+                                  <option value="workeradd_Lemi-Kura"> Lemi-Kura </option>
+                                  <option value="workeradd_Akaki-Kality"> Akaki-Kality </option>
+                                  <option value="workeradd_Arada">Arada</option>
+                                  <option value="workeradd_Addis-Ketema"> Addis-Ketema </option>
+                                  <option value="workeradd_Lideta"> Lideta </option>
+                          </select>
+                        </div>
+                        <div class="col-md-2">
+                          <label for="inputZip" class="form-label">Worker ID</label>
+                          <input type="text" class="form-control" id="workeradd_worker_id">
+                        </div>
+                        <div class="col-12">
+                          <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="gridCheck">
+                          </div>
+                        </div>
+                        <div class="col-12">
+                          <button type="submit" class="btn btn-primary">Continue</button>
+                        </div>
+
+                  </form>
+                </div>
+                
+            </div>
+        </div>
+          <br>
+    </section>
         <!-- Start of the Footer-->
             <footer id="footer">
                 <div class="footer-top">
