API - starting section made

--- a/API.html
+++ b/API.html
@@ -46,6 +46,10 @@
         </div>
     </header>
     <!-- End Header -->
+    <!-- Start of API section -->
+  <div class="section-title" style="padding-top: 100px;">
+    <h2>News</h2>
+  </div>
 
     <!-- Start of API section -->
     <div id="posts">
